src/test/ui/rfc-2627-raw-dylib/import-name-type-invalid-format.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/import-name-type-invalid-format.rs:3:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: import name type must be of the form `import_name_type = "string"`
  --> $DIR/import-name-type-invalid-format.rs:6:42
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = 6)]
   |                                          ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

